[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision_tree"
version = "0.0.1"
authors = [
  { name="Moses Kim", email="mosesckim@gmail.com" },
]
description = "Package for categorical decision tree"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["decision_tree"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/moseskimc/decision-tree"
"Bug Tracker" = "https://github.com/moseskimc/decision-tree/issues"
